syntax = "proto3";
package gomsg.cluster;
option go_package = "github.com/skshohagmiah/gomsg/api/generated/cluster";

import "common.proto";

service ClusterService {
  rpc GetNodes(GetNodesRequest) returns (GetNodesResponse);
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  rpc GetLeader(GetLeaderRequest) returns (GetLeaderResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Leave(LeaveRequest) returns (LeaveResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoResponse);
  rpc MigrateData(MigrateDataRequest) returns (MigrateDataResponse);
  rpc ReplicateData(ReplicateDataRequest) returns (ReplicateDataResponse);
}

message ClusterStatus {
  bool healthy = 1;
  string leader_id = 2;
  int32 total_nodes = 3;
  int32 active_nodes = 4;
  string raft_state = 5;
}

message ClusterStats {
  int64 total_operations = 1;
  int64 keys_count = 2;
  int64 queues_count = 3;
  int64 topics_count = 4;
  int64 memory_usage = 5;
  int64 disk_usage = 6;
}

message GetNodesRequest {
}

message GetNodesResponse {
  repeated gomsg.common.Node nodes = 1;
  gomsg.common.Status status = 2;
}

message GetStatusRequest {
}

message GetStatusResponse {
  ClusterStatus status = 1;
  gomsg.common.Status response_status = 2;
}

message GetLeaderRequest {
}

message GetLeaderResponse {
  gomsg.common.Node leader = 1;
  gomsg.common.Status status = 2;
}

message JoinRequest {
  string node_id = 1;
  string address = 2;
}

message JoinResponse {
  gomsg.common.Status status = 1;
}

message LeaveRequest {
  string node_id = 1;
}

message LeaveResponse {
  gomsg.common.Status status = 1;
}

message GetStatsRequest {
}

message GetStatsResponse {
  ClusterStats stats = 1;
  gomsg.common.Status status = 2;
}

message PartitionInfo {
  int32 id = 1;
  string primary = 2;
  repeated string replicas = 3;
}

message ClusterInfo {
  string node_id = 1;
  int32 total_partitions = 2;
  int32 replication_factor = 3;
  int32 total_nodes = 4;
  int32 active_nodes = 5;
  repeated PartitionInfo partitions = 6;
}

message GetClusterInfoRequest {
}

message GetClusterInfoResponse {
  ClusterInfo cluster_info = 1;
  gomsg.common.Status status = 2;
}

message KeyValuePair {
  string key = 1;
  bytes value = 2;
  int64 ttl = 3;
}

message MigrateDataRequest {
  int32 partition = 1;
  repeated KeyValuePair data = 2;
}

message MigrateDataResponse {
  gomsg.common.Status status = 1;
}

message ReplicateDataRequest {
  string key = 1;
  bytes value = 2;
  int64 ttl = 3;
}

message ReplicateDataResponse {
  gomsg.common.Status status = 1;
}